src/index.css
:root {
  font-family: monospace, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  --color-primary: #157aa6;
  --color-primary-light: #a8dcea;
  --color-secondary: #cf4730;
  --color-tertiary: #ff009d;

  color: white;
  background-color: var(--color-primary);

  --neon-shadow: 0 0 4px #f9f3fb, 0 0 11px #f9f3fb, 0 0 19px #f9f3fb,
    0 0 40px var(--color-tertiary), 0 0 80px var(--color-tertiary),
    0 0 120px var(--color-tertiary), 0 0 150px var(--color-tertiary),
    0 0 300px var(--color-tertiary);
  --neon-shadow-sm: 0 0 4px #f9f3fb, 0 0 11px #f9f3fb,
    0 0 15px var(--color-tertiary), 0 0 20px var(--color-tertiary),
    0 0 45px var(--color-tertiary), 0 0 60px var(--color-tertiary),
    0 0 85px var(--color-tertiary);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

@font-face {
  font-family: "Freehand";
  src: url("./fonts/Freehand-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Oswald";
  src: url("./fonts/Oswald-VariableFont_wght.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

body {
  margin: 0;
  padding: 0;
  min-height: 100svh;
}

section,
.full-size {
  display: flex;
  flex-direction: column;
  width: 100%;
  min-height: 100vh;
  align-items: center;
  justify-content: center;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  font-size: 35px;
  color: #f9f3fb;
  font-family: "Freehand", cursive;
}

h3 {
  color: white;
  font-family: "Oswald", sans-serif;
  font-size: 30px;
}

.dialog-content h3 {
  margin-bottom: 0;
}

h4 {
  color: white;
  font-family: "Oswald", sans-serif;
  font-size: 20px;
  margin-bottom: 0;
}

.neon-text {
  text-shadow: var(--neon-shadow);
}

.scroll-icon {
  font-size: 30px;
  margin: 20px;
}

#banner {
  width: 100%;
  height: 100svh;
  background-image: radial-gradient(
      ellipse at center,
      rgba(0, 0, 0, 0) 0%,
      rgba(0, 0, 0, 0.4) 20%,
      rgba(0, 0, 0, 1) 80%
    ),
    url("/assets/quiDoveBattono.jpg");
  background-size: 250%;
  background-position: center 35%;
  justify-content: flex-end;
  gap: 30px;
}

@media only screen and (min-width: 768px) {
  #banner {
    background-size: cover;
  }
}

#logo-banner {
  max-width: 250px;
}

#bottom-section {
  width: 100%;
  text-align: center;
  background: radial-gradient(
    ellipse at 50% 200%,
    var(--color-tertiary) 0%,
    transparent 60%
  );
  background-size: 200% 120%;
  background-position: top;
  animation: heartbeat 1s infinite;
}

@keyframes heartbeat {
  0%,
  100% {
    background-size: 200% 120%;
  }
  20% {
    background-size: 200% 100%;
  }
  40% {
    background-size: 200% 120%;
  }
  60% {
    background-size: 200% 100%;
  }
  80% {
    background-size: 200% 120%;
  }
}

#top-buttons-container {
  display: flex;
  width: 100%;
  position: fixed;
  justify-content: space-between;
  align-items: center;
  z-index: 998;
}

.icon-button {
  display: flex;
  width: 60px;
  height: 60px;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  color: white;
  cursor: pointer;
}

#whatsapp-icon {
  box-shadow: var(--neon-shadow);
  border-radius: 50%;
}

#instagram-icon {
  box-shadow: var(--neon-shadow);
  border-radius: 8px;
}

#menu h2 {
  font-size: 45px;
}

.content-container {
  display: flex;
  width: 100%;
  height: 100svh;
  background-color: var(--color-primary);
  box-shadow: 0 0 10px -5px black;
}

.carousel-container {
  overflow: hidden;
  position: relative;
  width: 100%;
  height: 100%;
}

.carousel-track {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 16px;
  width: 100%;
  animation: carousel-scroll 10s linear infinite;
}

@keyframes carousel-scroll {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-50%);
  }
}

.side-section {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  justify-self: flex-end;
  align-items: center;
  gap: 20px;
  background-color: var(--color-primary-light);
  color: var(--color-secondary);
}

a.side-section {
  text-decoration: none;
  padding: 0 0 20px 0;
}

.vertical-line {
  background-color: var(--color-secondary);
  width: 3px;
  height: 100%;
}

#right-icon {
  font-size: 30px;
}

.menu-link-title {
  writing-mode: vertical-rl;
  text-orientation: mixed;
  white-space: nowrap;
}

.menu-cards-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
  width: 100%;
  gap: 12px;
}

.menu-card {
  display: flex;
  width: 100%;
  min-height: 20vh;
  background-size: cover;
  background-position: center;
  align-items: center;
  justify-content: space-between;
}

.menu-card-title {
  width: 100%;
  text-align: center;
}

.dialog-container {
  display: flex;
  flex-direction: column;
  position: fixed;
  width: 100%;
  height: 100dvh;
  top: 0;
  z-index: 999;
  background-color: var(--color-primary);
}

.dialog-nav {
  display: flex;
  align-items: center;
  font-size: 30px;
  padding: 8px;
}

.dialog-content {
  display: flex;
  flex-direction: column;
  padding: 10px;
  overflow-y: scroll;
  box-shadow: inset 0px 10px 15px -10px black;
}

.menu-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 25px;
}

div.menu-row p,
h4 {
  margin: 0;
}

footer {
  padding: 20px 30px;
}

footer h4 {
  font-size: 16px;
  margin-top: 20px;
}

footer a {
  color: white;
  font-size: 12px;
}

footer ul {
  margin-top: 5px;
  list-style-type: none;
  padding-inline-start: 20px;
}

.center-text {
  display: flex;
  width: 100%;
  justify-content: center;
  font-size: 10px;
}

